--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
         <title>
             中国智慧城市产业技术创新战略联盟
         </title>
-        <link type="text/css" rel="stylesheet" href="/assets/css/style.css"><!--[if lt IE 9]>
+        <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css">
+        <link type="text/css" rel="stylesheet" href="/assets/css/style.css">
+        <!--[if lt IE 9]>
       <script src="/assets/js/html5shiv.js"></script>
       <script src="/assets/js/respond.min.js"></script>
     <![endif]-->
     </head>
     <body>
         <section id="header">
-          <div class="container">
+          <div class="container-1k">
           </div>
         </section>
         <section id="nav">
           <div id="nav-1">
-            <div class="container">
+            <div class="container-1k">
             <ul>
               <li><a href="#">首页</a></li>
-              <li><a href="#">关于联盟</a></li>
+              <li class="active"><a href="#">关于联盟</a></li>
               <li><a href="#">项目申报</a></li>
               <li><a href="#">论坛活动</a></li>
               <li><a href="#">科技政策</a></li>
@@ -34,14 +36,56 @@
             </ul>
             </div>
           </div>
-          <div id="nav-2"></div>
+          <div id="nav-2">
+            <div class="container-1k">
+
+            <ul class="menu-2">
+              <li><a href="#">二级菜单一</a></li>
+              <li><a href="#">二级菜单一</a></li>
+              <li><a href="#">二级菜单一</a></li>
+            </ul>
+            <ul class="menu-2">
+              <li><a href="#">二级菜单一</a></li>
+              <li><a href="#">二级菜单一</a></li>
+              <li><a href="#">二级菜单一</a></li>
+            </ul>
+            <ul class="menu-2">
+              <li><a href="#">二级菜单二</a></li>
+              <li><a href="#">二级菜单二</a></li>
+              <li><a href="#">二级菜单二</a></li>
+            </ul>
+            <ul class="menu-2">
+              <li><a href="#">二级菜单三</a></li>
+              <li><a href="#">二级菜单三</a></li>
+              <li><a href="#">二级菜单三</a></li>
+            </ul>
+            </div>
+          </div>
         </section>
         <section id="main">
-          <div class="container"></div>
+          <div class="container-1k"></div>
         </section>
         <section id="footer">
-          <div id="footer-main"></div>
-          <div id="footer-siteinfo"><div class="container">粤ICP备13013207号&nbsp&nbsp&nbsp电话: 010-82317867&nbsp&nbsp&nbsp邮箱: secret@smartcityunion.cn&nbsp&nbsp&nbsp地址: 北京市海淀区北四环中路238号柏彦大厦701室</div></div>
+          <div id="footer-main">
+            <div class="container-1k">
+              <div class="col-md-3">
+                <h3>友情链接</h3>
+                <ul>
+                  <li><a href="#">北京航空航天大学</a></li>
+                  <li><a href="#">智慧城市大赛</a></li>
+                  <li><a href="#">中国技术交易网</a></li>
+                  <li><a href="#">中关村物联网产业联盟</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3">222222222222222222222222222222222222222222222222222222222222222222222222</div>
+              <div class="col-md-3">333333333333333333333333333333333333333</div>
+              <div class="col-md-3">44444444444444444444444444444444444444444444444444</div>
+            </div>
+          </div>
+          <div id="footer-siteinfo"><div class="container-1k">粤ICP备13013207号&nbsp&nbsp&nbsp电话: 010-82317867&nbsp&nbsp&nbsp邮箱: secret@smartcityunion.cn&nbsp&nbsp&nbsp地址: 北京市海淀区北四环中路238号柏彦大厦701室</div></div>
         </section>
+
+        <script language="javascript" src="/assets/js/jquery-1.10.2.min.js"></script>
+        <script language="javascript" src="/assets/js/common.js"></script>
     </body>
 </html>
