--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <div id="nav-2">
             <div class="container-1k">
 
-            <ul class="menu-2">
-              <li><a href="#">二级菜单一</a></li>
+            <ul class="menu-2 active">
+              <li><a class="active" href="#">二级菜单一</a></li>
               <li><a href="#">二级菜单一</a></li>
               <li><a href="#">二级菜单一</a></li>
             </ul>
@@ -63,7 +63,16 @@
           </div>
         </section>
         <section id="main">
-          <div class="container-1k"></div>
+          <div class="container-1k">
+            <div class="breakingnews">
+              <div class="col-2 hotnews frame">11111111111</div>
+              <div class="col-2 hotnews frame">
+                <div class="frame-header">
+                  <h3>热点新闻</h3>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
         <section id="footer">
           <div id="footer-main">
@@ -77,9 +86,30 @@
                   <li><a href="#">中关村物联网产业联盟</a></li>
                 </ul>
               </div>
-              <div class="col-md-3">222222222222222222222222222222222222222222222222222222222222222222222222</div>
-              <div class="col-md-3">333333333333333333333333333333333333333</div>
-              <div class="col-md-3">44444444444444444444444444444444444444444444444444</div>
+              <div class="col-md-3">
+                <h3 class="invisiable">友情链接</h3>
+                <ul>
+                  <li><a href="#">北京航空航天大学</a></li>
+                  <li><a href="#">智慧城市大赛</a></li>
+                  <li><a href="#">中国技术交易网</a></li>
+                </ul>
+              </div>
+              <div class="col-md-2">
+                <h3>企业简介</h3>
+                <ul>
+                  <li><a href="#">服务支持</a></li>
+                  <li><a href="#">客户平台</a></li>
+                  <li><a href="#">企业专栏</a></li>
+                </ul>
+              </div>
+              <div class="col-md-2">
+                <h3>新浪微博</h3>
+                <img src="/assets/images/weibo.png"></img>
+              </div>
+              <div class="col-md-2">
+                <h3>微信公众号</h3>
+                <img src="/assets/images/weixin.png"></img>
+              </div>
             </div>
           </div>
           <div id="footer-siteinfo"><div class="container-1k">粤ICP备13013207号&nbsp&nbsp&nbsp电话: 010-82317867&nbsp&nbsp&nbsp邮箱: secret@smartcityunion.cn&nbsp&nbsp&nbsp地址: 北京市海淀区北四环中路238号柏彦大厦701室</div></div>
