--- a/list.html
+++ b/list.html
@@ -9,8 +9,7 @@
             中国智慧城市产业技术创新战略联盟
         </title>
         <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link type="text/css" rel="stylesheet" href="assets/css/style.css">
-        <!--[if lt IE 9]>
+        <link type="text/css" rel="stylesheet" href="assets/css/style.css"><!--[if lt IE 9]>
           <script src="assets/js/html5shiv.js"></script>
           <script src="assets/js/respond.min.js"></script>
         <![endif]-->
@@ -19,8 +18,7 @@
         <!-- page header -->
         <section id="header">
             <div class="container-1k"></div>
-        </section>
-        <!-- page nav -->
+        </section><!-- page nav -->
         <section id="nav">
             <!-- 1st level nav -->
             <div id="nav-1">
@@ -55,8 +53,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <!-- 2nd level of nav -->
+            </div><!-- 2nd level of nav -->
             <div id="nav-2">
                 <div class="container-1k">
                     <ul class="menu-2 active">
@@ -105,63 +102,183 @@
                     </ul>
                 </div>
             </div>
-        </section>
-        <!-- ===================================================================================== -->
+        </section><!-- ===================================================================================== -->
         <!-- page main -->
         <section id="main">
             <div class="container-1k">
                 <!-- section-1 breaking news -->
-
-                
-
-
                 <div class="col-2-3 frame bread">
                     <ol>
-                        <li><a href="#"><h3>论坛活动</h3></a></li>
-                        <li><a href="#">可点选选项</a></li>
-                        <li class="active">当前页不可点选</li>
+                        <li>
+                            <h3>
+                                <a href="#">论坛活动</a>
+                            </h3>
+                        </li>
+                        <li>
+                            <a href="#">可点选选项</a>
+                        </li>
+                        <li class="active">当前页不可点选
+                        </li>
                     </ol>
                 </div>
-
                 <div class="col-2-3 frame list-items page-items">
                     <ul>
-                        <li><a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span></li>
-                        <li><a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span></li>
+                        <li>
+                            <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
+                        </li>
+                        <li>
+                            <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
+                        </li>
                     </ul>
-
-                </div>
-
-
-                <div class="col-1-3 sidebar">
-                    <div class="frame">
-                        111
+                    <div class="text-center">
+                        <ul class="pagination">
+                            <li>
+                                <a href="#">«</a>
+                            </li>
+                            <li class="active">
+                                <a href="#">1</a>
+                            </li>
+                            <li>
+                                <a href="#">2</a>
+                            </li>
+                            <li>
+                                <a href="#">3</a>
+                            </li>
+                            <li>
+                                <a href="#">4</a>
+                            </li>
+                            <li>
+                                <a href="#">5</a>
+                            </li>
+                            <li>
+                                <a href="#">»</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-
-
-
-                
+                <div class="col-1-3 sidebar">
+                    <div class="login frame">
+                        <div class="frame-header">
+                            <h3>
+                                会员登录
+                            </h3>
+                        </div>
+                        <form class="form-horizontal login-form" role="form">
+                            <div class="form-group">
+                                <label for="inputEmail" class="col-sm-3 control-label">用户名</label>
+                                <div class="col-sm-9">
+                                    <input type="email" class="form-control" id="inputEmail" placeholder="用户名/手机/邮箱">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword" class="col-sm-3 control-label">密码</label>
+                                <div class="col-sm-9">
+                                    <input type="password" class="form-control" id="inputPassword" placeholder="在此输入密码">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputVerify" class="col-sm-3 control-label">验证码</label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" id="inputVerify" placeholder="输入验证码">
+                                </div>
+                                <div class="col-sm-4">
+                                    <img src="res/verify.png">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-offset-3 col-sm-9">
+                                    <a href="#" class="btn btn-default">注册</a> <button type="submit" class="btn btn-primary">登录</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="frame">
+                        <div class="frame-header">
+                            <h3>
+                                最新通告
+                            </h3><a href="#">MORE</a>
+                        </div>
+                        <div class="list-items">
+                            <ul>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">发现城市无锡站,专家们都说了些啥观点？</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">发现城市无锡站,专家们都说了些啥观点？</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">发现城市无锡站,专家们都说了些啥观点？</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <div class="clearfix"></div>
             </div>
-        </section>
-
-        <!-- ===================================================================================== -->
+        </section><!-- ===================================================================================== -->
         <section id="footer">
             <div id="footer-main">
                 <div class="container-1k">
