add pages company and list.

--- a/article.html
+++ b/article.html
@@ -106,142 +106,95 @@
         <!-- page main -->
         <section id="main">
             <div class="container-1k">
-                <!-- section-1 breaking news -->
                 <div class="left-main">
                     <div class="col-2-3 frame bread">
                         <ol>
                             <li>
                                 <h3>
-                                    <a href="#">论坛活动</a>
+                                    <a href="#">热点新闻</a>
                                 </h3>
                             </li>
                             <li>
-                                <a href="#">可点选选项</a>
+                                <a href="#">新闻列表</a>
                             </li>
-                            <li class="active">当前页不可点选
+                            <li class="active">新闻正文
                             </li>
                         </ol>
                     </div>
-                    <div class="col-2-3 frame list-items page-items">
-                        <ul>
-                            <li>
-                                <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市与一体化新型产业集群模式正式亮相新余</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">2014中国（上海）智慧城市创新发展峰会在沪召开</a><span class="date">2014-09-02</span>
-                            </li>
-                            <li>
-                                <a href="#">智慧城市共发力,华三通信与银江股份签战略协议</a><span class="date">2014-09-02</span>
-                            </li>
-                        </ul>
-                        <div class="text-center">
-                            <ul class="pagination">
-                                <li>
-                                    <a href="#">«</a>
-                                </li>
-                                <li class="active">
-                                    <a href="#">1</a>
-                                </li>
-                                <li>
-                                    <a href="#">2</a>
-                                </li>
-                                <li>
-                                    <a href="#">3</a>
-                                </li>
-                                <li>
-                                    <a href="#">4</a>
-                                </li>
-                                <li>
-                                    <a href="#">5</a>
-                                </li>
-                                <li>
-                                    <a href="#">»</a>
-                                </li>
-                            </ul>
-                        </div>
+                    <div class="col-2-3 frame article">
+                        <h3>关于智慧养老领域交流会参会的通知</h3>
+                        <div class="meta">作者&nbsp&nbsp&nbsp<a href="#">张永辉</a>&nbsp&nbsp&nbsp发表于&nbsp&nbsp&nbsp2014 年 12 月 21 日</div
+                            >
+
+
+                        <p class="center-p">
+                            <img src="res/example.jpg"></img>
+                        </p>
+
+                        <p class="center-p">
+                            <img src="res/example.jpg"></img>
+                        </p>
+
+                        <p>征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。</p>
+                        <p>征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。</p>
+                        <p>征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。</p>
+                        <p>征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。</p>
+
+
+                    </div>
+                    <div class="col-2-3 frame foot-nav">
+                        <span>上一篇</span><a href="#">关于启动2014年度科技金融专项资金申报工作的通知</a>
+                        <span>下一篇</span><a href="#">关于召开2014年北京市中小企业及“双自主”企业国际市场开拓资金政策培训会</a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="col-1-3 sidebar">
-                    <div class="login frame">
+                    <div class="frame">
                         <div class="frame-header">
                             <h3>
-                                会员登录
-                            </h3>
+                                最热点击
+                            </h3><a href="#">MORE</a>
                         </div>
-                        <form class="form-horizontal login-form" role="form">
-                            <div class="form-group">
-                                <label for="inputEmail" class="col-sm-3 control-label">用户名</label>
-                                <div class="col-sm-9">
-                                    <input type="email" class="form-control" id="inputEmail" placeholder="用户名/手机/邮箱">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPassword" class="col-sm-3 control-label">密码</label>
-                                <div class="col-sm-9">
-                                    <input type="password" class="form-control" id="inputPassword" placeholder="在此输入密码">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputVerify" class="col-sm-3 control-label">验证码</label>
-                                <div class="col-sm-5">
-                                    <input type="text" class="form-control" id="inputVerify" placeholder="输入验证码">
-                                </div>
-                                <div class="col-sm-4">
-                                    <img src="res/verify.png">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-sm-offset-3 col-sm-9">
-                                    <a href="#" class="btn btn-default">注册</a> <button type="submit" class="btn btn-primary">登录</button>
-                                </div>
-                            </div>
-                        </form>
+                        <div class="list-items">
+                            <ul>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">发现城市无锡站,专家们都说了些啥观点？</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">发现城市无锡站,专家们都说了些啥观点？</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">神州数码与河北签署战略合作协议</a>
+                                </li>
+                                <li>
+                                    <a href="#">发现城市无锡站,专家们都说了些啥观点？</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="ad ad300">
+                        <img src="">
+                        <div class="ad-tip dev-only">
+                            广告位 323×(60-100) 广告位
+                        </div>
+                    </div>
+                    <div class="ad ad300">
+                        <img src="">
+                        <div class="ad-tip dev-only">
+                            广告位 323×(60-100) 广告位
+                        </div>
                     </div>
                     <div class="ad ad300">
                         <img src="">
@@ -258,7 +211,7 @@
                     <div class="frame">
                         <div class="frame-header">
                             <h3>
-                                最新通告
+                                最新发布
                             </h3><a href="#">MORE</a>
                         </div>
                         <div class="list-items">
