full page added.

--- a/solution.html
+++ b/solution.html
@@ -9,7 +9,8 @@
             中国智慧城市产业技术创新战略联盟
         </title>
         <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link type="text/css" rel="stylesheet" href="assets/css/style.css"><!--[if lt IE 9]>
+        <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+        <!--[if lt IE 9]>
           <script src="assets/js/html5shiv.js"></script>
           <script src="assets/js/respond.min.js"></script>
         <![endif]-->
@@ -110,170 +111,83 @@
                     <ol>
                         <li>
                             <h3>
-                                <a href="#">单位简介</a>
+                                <a href="#">解决方案</a>
                             </h3>
                         </li>
-                        <li class="active">智慧城市创新解决方案研究中心
+                        <li class="active">智慧城市创新解决方案
                         </li>
                     </ol>
                 </div>
-                <div class="frame company-intro">
-                    <div class="cintro-main">
+                <div class="frame solution-sum">
+
+                    <div class="s-slider s-block">
+
+                        <ul class="bxslider">
+                          <li><img src="res/example.jpg" /></li>
+                          <li><img src="res/example.jpg" /></li>
+                          <li><img src="res/example.jpg" /></li>
+                        </ul>
+                        
+                        <div id="bx-pager">
+                          <a data-slide-index="0" href=""><img src="res/example.jpg" /></a>
+                          <a data-slide-index="1" href=""><img src="res/example.jpg" /></a>
+                          <a data-slide-index="2" href=""><img src="res/example.jpg" /></a>
+                        </div>
+
+                        <div class="clearfix"></div>
+
+                    </div>
+                    <div class="s-main s-block">
                         <h3>
-                            腾讯有限公司
+                            智慧城市微波通信解决方案
                         </h3>
                         <div class="meta">
-                            加入联盟时间&nbsp;&nbsp;&nbsp;2014-08-19
+                            布署时间&nbsp;&nbsp;&nbsp;2014-08-19
                         </div>
-                        <p>
-                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
-                        </p>
-                        <p>
-                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
-                        </p>
-                        <p>
-                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
-                        </p>
-                        <p>
-                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
-                        </p>
-                    </div>
 
-                    <div class="ad company-logo">
-                        <img src="">
-                        <div class="ad-tip dev-only">
-                            LOGO位置 310×(60+)
-                        </div>
-                    </div>
-                    <div class="cintro-side">
                         <ul>
-                        <li>
-                            <div class="rule-num">
-                                公司名称：
-                            </div>
-                            <div class="rule-detail">
-                                腾讯科技（北京）计算机系统有限公司
-                            </div>
-                        </li>
-                        <li>
-                            <div class="rule-num">
-                                外文名称：
-                            </div>
-                            <div class="rule-detail">
-                                Tecent Group
-                            </div>
-                        </li>
-                        <li>
-                            <div class="rule-num">
-                                总部地点：
-                            </div>
-                            <div class="rule-detail">
-                                中国深圳
-                            </div>
-                        </li>
-                        <li>
-                            <div class="rule-num">
-                                成立时间：
-                            </div>
-                            <div class="rule-detail">
-                                1998年11月11日
-                            </div>
-                        </li>
-                        <li>
-                            <div class="rule-num">
-                                经营范围：
-                            </div>
-                            <div class="rule-detail">
-                                互联网
-                            </div>
-                        </li>
-                        <li>
-                            <div class="rule-num">
-                                公司性质
-                            </div>
-                            <div class="rule-detail">
-                                股份制
-                            </div>
-                        </li>
-                        <li>
-                            <div class="rule-num">
-                                联系电话：
-                            </div>
-                            <div class="rule-detail tel">
-                                010-76328736
-                            </div>
-                        </li>
+                            <li>单价： 面议</li>
+                            <li>起订： 10</li>
+                            <li>发货期限： 自买家付款之后3日内发货</li>
+                            <li>所在地： 北京</li>
+                            <li>有效期至： 长期有效</li>
+                        </ul>
 
-                    </ul>
+                        <div class="buy">
+                            <button type="button" class="btn btn-primary btn-lg">点此询价</button>
+                        </div>
+
+                        
+                    </div>
+
+                    <div class="s-side s-block">
+                        <h4><a href="#">智慧城市创新解决方案研究中心</a></h4>
+                        <ul>
+                            <li>联系电话： 010-2312312312</li>
+                            <li>技术等级： 五星级</li>
+                        </ul>
+                        <p>本中心承接业务范围为智慧城市整体方案的设计和部署。本中心承接业务范围为智慧城市整体方案的设计和部署。本中心承接业务范围为智慧城市整体方案的设计和部署。本中心承接业务范围为智慧城市整体方案的设计和部署。本中心承接业务范围为智慧城市整体方案的设计和部署。本中心承接业务范围为智慧城市整体方案的设计。</p>
                     </div>
                 </div>
 
-                <div class="frame company-solution">
+                <div class="frame solution-intro">
                     <div class="frame-header">
                         <h3>
-                            解决方案展示
-                        </h3><a href="#">MORE</a>
+                            解决方案简介
+                        </h3>
                     </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
-                    <div class="one-solution">
-                        <a href="#"><img src="res/example.jpg"></a>
-                        <h4>
-                            <a href="#">解决方案标题</a>
-                        </h4>
-                    </div>
+                    <p>
+                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
+                        </p>
+                        <p>
+                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
+                        </p>
+                        <p>
+                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
+                        </p>
+                        <p>
+                            征集重大文化科技成果应用项目。加强文化领域技术集成创新与商业模式创新，培育新兴文化产业。征集文化科技企业应用大数据、移动互联网、物联网等先进技术，扩大用户规模、提升用户体验、提高服务效率的项目；征集将信息科学、材料科学、制造与工程科学等领域研发成果在文化产业跨界应用的项目；征集通过应用重大科技成果实现文化产品创新、服务模式创新、消费模式创新的项目。
+                        </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -352,6 +266,7 @@
         </section><script language="javascript" src="assets/js/jquery-1.10.2.min.js" type="text/javascript">
 </script><script language="javascript" src="assets/js/bootstrap.min.js" type="text/javascript">
 </script><script language="javascript" src="assets/js/unslider.min.js" type="text/javascript">
+</script><script language="javascript" src="assets/js/jquery.bxslider.min.js">
 </script><script language="javascript" src="assets/js/common.js" type="text/javascript">
 </script>
     </body>
