minor bug fixed.

--- a/people.html
+++ b/people.html
@@ -110,17 +110,16 @@
                     <ol>
                         <li>
                             <h3>
-                                <a href="#">论坛活动</a>
+                                <a href="#">专家教授</a>
                             </h3>
                         </li>
-                        <li>
-                            <a href="#">可点选选项</a>
-                        </li>
-                        <li class="active">当前页不可点选
+                        <li class="active">专家名录
                         </li>
                     </ol>
                 </div>
                 <div class="frame people">
+
+                    <div class="cat">中国工程院院士</div>
                     <div class="person">
                         <div class="avatar">
                             <img src="res/user.png"></img>
@@ -175,6 +174,8 @@
                             中国科学院院士
                         </p>
                     </div>
+
+                    <div class="cat">中国科学院院士</div>
 
                     <div class="person">
                         <div class="avatar">
