fix inline-block issue in IE7.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 </div>
                 <!-- ===================================================================================== -->
                 <div class="ad ad1000">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 990×(60-100) 广告位
                     </div>
@@ -399,7 +399,7 @@
                 <!-- end of notification -->
                 <!-- ===================================================================================== -->
                 <div class="ad ad1000">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 990×(60-100) 广告位
                     </div>
@@ -516,13 +516,13 @@
                 <!-- end of solutions -->
                 <!-- ===================================================================================== -->
                 <div class="ad ad300">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 323×(60-100) 广告位
                     </div>
                 </div>
                 <div class="ad ad600">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 657×(60-100) 广告位
                     </div>
@@ -681,37 +681,37 @@
                 <!-- end of test service -->
                 <!-- ===================================================================================== -->
                 <div class="ad ad300">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 323×(60-100) 广告位
                     </div>
                 </div>
                 <div class="ad ad300">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 323×(60-100) 广告位
                     </div>
                 </div>
                 <div class="ad ad300">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 323×(60-100) 广告位
                     </div>
                 </div>
                 <div class="ad ad300">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 323×(60-100) 广告位
                     </div>
                 </div>
                 <div class="ad ad300">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 323×(60-100) 广告位
                     </div>
                 </div>
                 <div class="ad ad300">
-                    <img src="">
+                    <img src="images/pixel.gif"></img>
                     <div class="ad-tip dev-only">
                         广告位 323×(60-100) 广告位
                     </div>
@@ -828,7 +828,7 @@
                 <!-- end of result -->
                 <!-- ===================================================================================== -->
                 <div class="ad ad1000">
-                    <img src="">
+                    <img src="images/pixel.gif">
                     <div class="ad-tip dev-only">
                         广告位 990×(60-100) 广告位
                     </div>
