--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="author" content="JINGBO XU (YECOL)">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" user-scalable="no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>
             中国智慧城市产业技术创新战略联盟
         </title>
