display bug fixed.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,56 @@
                             <a href="#">二级菜单三</a>
                         </li>
                     </ul>
+                    <ul class="menu-2">
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                    </ul>
+                    <ul class="menu-2">
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                    </ul>
+                    <ul class="menu-2">
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                    </ul>
+                    <ul class="menu-2">
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                        <li>
+                            <a href="#">二级菜单三</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
