tab display bug fixed.

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="notifications">
 
                     <!-- tabnews -->
-                    <div class="col-3-5 frame frame-tab notifinews">
+                    <div class="col-3-5 frame-tab notifinews">
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="active">
